--- a/app/src/main/res/layout/activity_upload_video.xml
+++ b/app/src/main/res/layout/activity_upload_video.xml
@@ -8,6 +8,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:fillViewport="true"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_upload_video"
         app:layout_constraintEnd_toEndOf="parent"
@@ -15,164 +16,151 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_upload_video"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/btn_upload_video"
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/inputLay1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/text_upload_videotitle"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@+id/text_upload_videotitle"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:background="#f6f6f6"
+                android:hint="视频标题"
+                android:singleLine="true" />
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/inputLay1"
-                android:layout_width="0dp"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/inputLay2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/inputLay1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/upload_video_label"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textView3"
-                app:layout_constraintTop_toTopOf="parent">
+                android:background="#f6f6f6"
+                android:hint="视频标签"
+                android:singleLine="true" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/text_upload_videotitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:background="#f6f6f6"
-                    android:hint="视频标题"
-                    android:text="上传测试"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/inputLay2"
-                android:layout_width="0dp"
-                android:layout_marginTop="8dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/inputLay1">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/upload_video_label"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#f6f6f6"
-                    android:singleLine="true"
-                    android:hint="视频标签"
-                    android:text="测试标签"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/inputLay3"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/inputLay2" >
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/inputLay3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/inputLay2">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/upload_video_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#f6f6f6"
-                android:hint="视频描述"
-                android:text="视频描述:这是测试上传功能" />
-            </com.google.android.material.textfield.TextInputLayout>
+                android:hint="视频描述" />
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
-                android:text="视频封面"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/inputLay3" />
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:text="视频封面"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/inputLay3" />
 
-            <ImageView
-                android:id="@+id/upload_img_video"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:maxWidth="300dp"
-                android:maxHeight="300dp"
-                android:minWidth="100dp"
-                android:minHeight="100dp"
-                android:text="视频封面"
-                app:layout_constraintEnd_toStartOf="@+id/upload_btn_choosefile"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        <ImageView
+            android:id="@+id/upload_img_video"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:maxWidth="300dp"
+            android:maxHeight="300dp"
+            android:minWidth="100dp"
+            android:minHeight="100dp"
+            android:text="视频封面"
+            app:layout_constraintEnd_toStartOf="@+id/upload_btn_choosefile"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-            <Button
-                android:id="@+id/upload_btn_choosefile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="选择文件"
-                app:layout_constraintBottom_toBottomOf="@+id/upload_img_video"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/upload_img_video" />
-
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
-                android:text="视频文件"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/upload_img_video" />
-
-            <TextView
-                android:id="@+id/upload_text_video_file"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="未选择"
-                app:layout_constraintBottom_toBottomOf="@+id/upload_btn_videochoose"
-                app:layout_constraintEnd_toStartOf="@+id/upload_btn_videochoose"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/upload_btn_videochoose" />
+        <Button
+            android:id="@+id/upload_btn_choosefile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="选择文件"
+            app:layout_constraintBottom_toBottomOf="@+id/upload_img_video"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/upload_img_video" />
 
 
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:text="视频文件"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/upload_img_video" />
+
+        <TextView
+            android:id="@+id/upload_text_video_file"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="未选择"
+            app:layout_constraintBottom_toBottomOf="@+id/upload_btn_videochoose"
+            app:layout_constraintEnd_toStartOf="@+id/upload_btn_videochoose"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/upload_btn_videochoose" />
 
 
-            <Button
-                android:id="@+id/upload_btn_videochoose"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="选择文件"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        <Button
+            android:id="@+id/upload_btn_videochoose"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="选择文件"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 
+        <tcking.github.com.giraffeplayer2.VideoView
+            android:id="@+id/video_preview"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:maxHeight="120dp"
+            android:minHeight="100dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/upload_btn_videochoose" />
 
-<!--            <tcking.github.com.giraffeplayer2.VideoView-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_marginLeft="4dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:minHeight="100dp"-->
-<!--                app:layout_constraintRight_toLeftOf="@+id/upload_btn_choosefile"-->
-<!--                app:layout_constraintLeft_toLeftOf="parent"-->
-<!--                app:layout_constraintTop_toBottomOf="parent"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"/>-->
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
 
